feat: 基本实现用户登录和获取用户信息

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,21 @@ spring.datasource.username = root
 spring.datasource.password = 123456
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.datasource.type = com.zaxxer.hikari.HikariDataSource
-
 spring.jpa.database = MYSQL
 spring.jpa.database-platform = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.jdbc.time_zone = UTC
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.open-in-view = false
 spring.jpa.show-sql = false
+# 停车位数量
+parkingSpaces = 10
+# 令牌密钥（可通过 JwtTokenUtil 生成）
+tokenKey = PKU9pTj71dKJoLw5gkMfgfzwRt7k7JcWyWjk6VYT3NY=
+# 小程序 appId
+appId = xxx
+# 小程序 appSecret
+appSecret = xxx
+#logging.level.root = debug
+#logging.level.sql = debug
+logging.level.web = debug
 
