perf: 完善预约停车位

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,6 @@ appId = xxx
 # 小程序 appSecret
 appSecret = xxx
 #logging.level.root = debug
-logging.level.sql = trace
+logging.level.sql = debug
 logging.level.web = debug
 
